# Image_Encryption_through_FourierCryptography

./: .gitignore  Description.txt  README.md  main.py  pyproject.toml  requirements.txt
.kiro/specs/fourier-image-encryption/: design.md  requirements.md  tasks.md
Example_test/: decrypt_and_animate_luffy2.py  decrypt_and_sketch_luffy2.py  decrypt_and_sketch_luffy2_fixed.py  example_api_client.py  run_api.py  test_api_basic.py  test_logging_and_images.py  test_luffy2_encryption.py
benchmarks/: performance_benchmark.py
docs/: AI_MODEL_TRAINING.md  AI_TRAINING_SUMMARY.md  API_GUIDE.md  ARCHITECTURE.md  DOCUMENTATION_INDEX.md  FINAL_CHECKPOINT_REPORT.md  FOURIER_RECONSTRUCTION.md  IMAGES_AND_LOGGING.md  LUFFY2_TESTING.md  MONITORING.md  PERFORMANCE_OPTIMIZATIONS.md  PLUGIN_GUIDE.md  PROJECT_OVERVIEW.md  README.md  SECURITY.md  SECURITY_STANDARDS.md  SPEED_CONTROL.md  VISUALIZATION_GUIDE.md
docs/training_configs/: README.md  anomaly_detector.yaml  coefficient_optimizer.yaml  edge_detector_production.yaml  edge_detector_quick.yaml  edge_detector_transfer_learning.yaml  hyperparameter_search.yaml
examples/: README.md  coefficient_optimizer_example.py  concurrent_encryption_demo.py  fast_demo.py  interactive_animation.py  monitoring_demo.py  plugin_system_demo.py  quick_demo.py  use_test_images.py  visualization_demo.py  visualize_decryption.py
fourier_encryption/: __init__.py
fourier_encryption/ai/: __init__.py  anomaly_detector.py  coefficient_optimizer.py  edge_detector.py  model_repository.py
fourier_encryption/api/: __init__.py  routes.py
fourier_encryption/application/: __init__.py  orchestrator.py
fourier_encryption/cli/: README.md  __init__.py  commands.py
fourier_encryption/concurrency/: README.md  __init__.py  concurrent_orchestrator.py  thread_pool.py  thread_safe_renderer.py
fourier_encryption/config/: __init__.py  logging_config.py  paths.py  settings.py
fourier_encryption/core/: __init__.py  contour_extractor.py  edge_detector.py  epicycle_engine.py  fourier_transformer.py  image_processor.py
fourier_encryption/encryption/: __init__.py  aes_encryptor.py  base_encryptor.py  key_manager.py
fourier_encryption/models/: __init__.py  data_models.py  exceptions.py
fourier_encryption/plugins/: IMPLEMENTATION_SUMMARY.md  PLUGIN_DEVELOPMENT.md  __init__.py  base_plugin.py  plugin_loader.py  plugin_registry.py
fourier_encryption/plugins/examples/: __init__.py  example_ai_plugin.py  (+1 more)
fourier_encryption/security/: __init__.py  input_validator.py  path_validator.py  sanitizer.py
fourier_encryption/transmission/: __init__.py  serializer.py
fourier_encryption/utils/: __init__.py  cache.py  profiling.py
fourier_encryption/visualization/: __init__.py  image_reconstructor.py  live_renderer.py  monitoring_dashboard.py
images/: README.md
tests/: ACCEPTANCE_CRITERIA_VERIFICATION.md  VIEWING_GUIDE.md  __init__.py  performance_benchmark.py  tasks.md  verify_coefficient_optimizer.py  verify_pipeline.py  view_contour_quick.py  view_decrypted_contour.py
tests/fixtures/: __init__.py
tests/integration/: test_coefficient_optimizer_integration.py  test_core_pipeline.py  test_orchestrator.py  test_visualization_workflow.py
tests/property/: test_properties_ai.py  test_properties_config.py  test_properties_data_models.py  test_properties_encryption.py  test_properties_epicycle_engine.py  test_properties_fourier_transform.py  test_properties_image_processing.py  test_properties_model_management.py  test_properties_monitoring.py  test_properties_optimizer.py  test_properties_serialization.py  test_properties_visualization.py
tests/unit/: test_ai_edge_detector.py  test_anomaly_detector.py  test_coefficient_optimizer.py  test_concurrent_orchestrator.py  test_config.py  test_edge_detector.py  test_encryption.py  test_epicycle_engine.py  test_fourier_transformer.py  test_image_processor.py  test_model_repository.py  test_security.py  test_serialization.py  test_thread_safe_renderer.py  test_visualization.py
