[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fourier-encryption"
version = "1.0.0"
description = "Industrial-grade image encryption using Fourier Series and epicycles with AI integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Fourier Encryption Team"}
]
keywords = [
    "encryption",
    "fourier-transform",
    "image-processing",
    "cryptography",
    "epicycles",
    "ai",
    "computer-vision"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "cryptography>=41.0.0",
    "msgpack>=1.0.5",
    "typer>=0.9.0",
    "click>=8.1.0",
    "pyqtgraph>=0.13.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
ai = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
dev = [
    "pytest>=7.4.0",
    "hypothesis>=6.82.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]
all = [
    "fourier-encryption[ai,api,dev]",
]

[project.scripts]
fourier-encrypt = "fourier_encryption.cli.commands:app"

[project.urls]
Homepage = "https://github.com/fourier-encryption/fourier-encryption"
Documentation = "https://fourier-encryption.readthedocs.io"
Repository = "https://github.com/fourier-encryption/fourier-encryption"
Issues = "https://github.com/fourier-encryption/fourier-encryption/issues"

[tool.setuptools]
packages = ["fourier_encryption"]

[tool.setuptools.package-data]
fourier_encryption = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=fourier_encryption",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "property: marks tests as property-based tests",
    "ai: marks tests that require AI models",
    "gpu: marks tests that require GPU",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "msgpack.*",
    "pyqtgraph.*",
    "torch.*",
    "torchvision.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["fourier_encryption"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
